--- a/examples/cgan.config
+++ b/examples/cgan.config
@@ -1,10 +1,11 @@
 model		cgan
-epochs		3
+epochs		200
 batch_size 	256
 n_gpus 		2
 optimizer	adam
-lr		1e-4
+lr			1e-4
 beta1		0.5
 beta2		0.9
 dataset		nyuv2
 cache_dir	/tmp
+skip_layers
